Add the moderate content menu
Fix #3

Adds a moderate content menu that contains links for
- Moderated content
- Approve content
- Review content

--- a/localgov_tasty_backend.routing.yml
+++ b/localgov_tasty_backend.routing.yml
@@ -1,3 +1,10 @@
+localgov_tasty_backend.moderate_content_page:
+  path: '/admin/manage/moderate-content'
+  defaults:
+    _controller: '\Drupal\tasty_backend\Controller\TastyBackendController::menuBlockContents'
+    _title: 'Moderate content'
+  requirements:
+    _permission: 'access tasty backend admin pages'
 localgov_tasty_backend.manage_site_page:
   path: '/admin/manage/site'
   defaults:
