--- a/localgov_tasty_backend.links.menu.yml
+++ b/localgov_tasty_backend.links.menu.yml
@@ -1,3 +1,15 @@
+localgov_tasty_backend.moderate_content_page:
+  title: 'Moderate content'
+  description: 'Moderate website contents.'
+  parent: tb-manage
+  menu_name: tb-manage
+  route_name: localgov_tasty_backend.moderate_content_page
+  weight: 1
+  options:
+    attributes:
+      class:
+          - toolbar-icon
+          - toolbar-icon-system-admin-content
 localgov_tasty_backend.manage_site_page:
   title: 'Site features'
   description: 'Manage site features.'
