Update menu link groups so they install when respective modules are installed
- Update each menu link group with corresponding module and config dependencies
- Implement hook_modules_installed to trigger optional config install
  of menu link groups when localgov modules are installed.

--- a/config/optional/localgov_menu_link_group.localgov_menu_link_group.localgov_menu_link_group_tb_add_content_services.yml
+++ b/config/optional/localgov_menu_link_group.localgov_menu_link_group.localgov_menu_link_group_tb_add_content_services.yml
@@ -1,6 +1,13 @@
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - system.menu.tb-manage
+  enforced:
+      module:
+        - localgov_tasty_backend
+        - localgov_services
+        - localgov_menu_link_group
 id: localgov_menu_link_group_tb_add_content_services
 group_label: Services
 weight: 1
