--- a/config/optional/localgov_menu_link_group.localgov_menu_link_group.localgov_menu_link_group_tb_add_content_news.yml
+++ b/config/optional/localgov_menu_link_group.localgov_menu_link_group.localgov_menu_link_group_tb_add_content_news.yml
@@ -1,6 +1,13 @@
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - system.menu.tb-manage
+  enforced:
+      module:
+        - localgov_tasty_backend
+        - localgov_news
+        - localgov_menu_link_group
 id: localgov_menu_link_group_tb_add_content_news
 group_label: News
 weight: 1
